[gd_scene load_steps=16 format=3 uid="uid://b0lr4dkvotqi0"]

[ext_resource type="Script" path="res://Assets/Scripts/cardControllerOponente.gd" id="1_t211q"]
[ext_resource type="Texture2D" uid="uid://cbrral28m3rse" path="res://Assets/Textures/cardPlaceholder.jpg" id="2_kd3rl"]
[ext_resource type="Texture2D" uid="uid://cr0e56ely2b44" path="res://Assets/Textures/card_base4.png" id="2_mrqt5"]
[ext_resource type="Theme" uid="uid://dvsojcmw5svs1" path="res://Assets/Themes/label_ingame.tres" id="3_f5asn"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/card_state_machine.gd" id="4_e7fce"]
[ext_resource type="Texture2D" uid="uid://8owkkp6domqv" path="res://icon.svg" id="4_jt0cu"]
[ext_resource type="Texture2D" uid="uid://ccfol74xcm0eo" path="res://Assets/Textures/card_on_board.png" id="5_4iw45"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/States/idle_oponente.gd" id="5_43kun"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/States/draggedOponente.gd" id="6_jekbv"]
[ext_resource type="Script" path="res://Assets/Scripts/CardStateMachine/States/on_board_oponente.gd" id="7_07c1w"]

[sub_resource type="Animation" id="Animation_y2baj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("back:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("on_hand:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("on_hand:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("back:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ius2p"]
resource_name = "hide_card"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("back:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1283, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("back:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1283),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("on_hand:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1283, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("on_hand:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1283),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_lqtoi"]
resource_name = "turn_card_around"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("back:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0712766, 0.128345),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("on_hand:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.128345, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("on_hand:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.128345),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("back:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.128345),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kgkys"]
_data = {
"RESET": SubResource("Animation_y2baj"),
"hide_card": SubResource("Animation_ius2p"),
"turn_card_around": SubResource("Animation_lqtoi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8611"]
size = Vector2(169, 238)

[node name="CartaUI" type="Control"]
custom_minimum_size = Vector2(170, 238)
layout_mode = 3
anchors_preset = 0
offset_left = -85.0
offset_top = -119.0
offset_right = 85.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(85, 119)
mouse_filter = 1
script = ExtResource("1_t211q")

[node name="on_hand" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1)
pivot_offset = Vector2(85, 0)
mouse_filter = 2

[node name="card_base" type="TextureRect" parent="on_hand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_mrqt5")
expand_mode = 1
stretch_mode = 5

[node name="on_hand_tex" type="TextureRect" parent="on_hand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_kd3rl")
expand_mode = 1
stretch_mode = 5

[node name="Nombre" type="Label" parent="on_hand"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -106.0
offset_right = 84.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_f5asn")
theme_override_font_sizes/font_size = 30
text = "pipo"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Descripcion" type="Label" parent="on_hand"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.5
offset_top = -59.0
offset_right = 68.5
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_f5asn")
theme_override_font_sizes/font_size = 12
text = "Hago esto jeje"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Marea" type="Label" parent="on_hand"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -33.0
offset_right = 8.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_f5asn")
theme_override_colors/font_color = Color(0.376471, 0.541176, 1, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Vida" type="Label" parent="on_hand"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -30.0
offset_right = 47.0
offset_bottom = 1.0
grow_vertical = 0
theme = ExtResource("3_f5asn")
theme_override_colors/font_color = Color(100, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Coste" type="Label" parent="on_hand"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_right = -11.0
offset_bottom = 37.0
grow_horizontal = 0
theme = ExtResource("3_f5asn")
theme_override_font_sizes/font_size = 20
text = "74"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coste_Antorchas" type="HBoxContainer" parent="on_hand"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = 35.0
grow_horizontal = 0
alignment = 2

[node name="Tipo" type="TextureRect" parent="on_hand"]
custom_minimum_size = Vector2(25, 26)
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 31.0
offset_bottom = 32.0

[node name="on_board" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="card_base2" type="TextureRect" parent="on_board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -92.0
offset_right = 92.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_4iw45")
expand_mode = 1
stretch_mode = 5

[node name="on_board_tex" type="TextureRect" parent="on_board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_jt0cu")
expand_mode = 1
stretch_mode = 5

[node name="Marea_on_board" type="Label" parent="on_board"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -86.0
offset_right = -2.0
offset_bottom = -55.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_f5asn")
theme_override_colors/font_color = Color(0.376471, 0.541176, 1, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Vida_on_board" type="Label" parent="on_board"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -86.0
offset_right = 48.0
offset_bottom = -55.0
grow_vertical = 0
theme = ExtResource("3_f5asn")
theme_override_colors/font_color = Color(0.239216, 0.831373, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"

[node name="back" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(85, 0)

[node name="back_tex" type="TextureRect" parent="back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kd3rl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kgkys")
}

[node name="detectorColision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectorColision"]
position = Vector2(85, 119)
shape = SubResource("RectangleShape2D_i8611")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("card", "current_state")]
script = ExtResource("4_e7fce")
card = NodePath("..")
current_state = NodePath("idleState")

[node name="idleState" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("dragged_state")]
script = ExtResource("5_43kun")
dragged_state = NodePath("../draggedState")

[node name="draggedState" type="Node" parent="CardStateMachine" node_paths=PackedStringArray("idle_state", "onBoard_state")]
script = ExtResource("6_jekbv")
idle_state = NodePath("../idleState")
onBoard_state = NodePath("../onBoardState")

[node name="onBoardState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_07c1w")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="detectorColision" to="CardStateMachine/draggedState" method="_on_detector_colision_area_entered"]
[connection signal="area_exited" from="detectorColision" to="CardStateMachine/draggedState" method="_on_detector_colision_area_exited"]
[connection signal="mouse_entered" from="detectorColision" to="." method="_on_detector_colision_mouse_entered"]
[connection signal="mouse_entered" from="detectorColision" to="CardStateMachine/idleState" method="_on_detector_colision_mouse_entered"]
[connection signal="mouse_entered" from="detectorColision" to="CardStateMachine/onBoardState" method="_on_detector_colision_mouse_entered"]
[connection signal="mouse_exited" from="detectorColision" to="." method="_on_detector_colision_mouse_exited"]
[connection signal="mouse_exited" from="detectorColision" to="CardStateMachine/idleState" method="_on_detector_colision_mouse_exited"]
[connection signal="mouse_exited" from="detectorColision" to="CardStateMachine/onBoardState" method="_on_detector_colision_mouse_exited"]
